--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
               <h2 class="subtitle subtitled">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum cupiditate dolorum vitae dolores nesciunt totam magni quas. Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
 
               <!-- Button untuk menghubungkan ke halaman HTML lain -->
-              <a href="./Project3/hello-parallax.html" class="button is-link">Pergi ke Halaman Lain</a>
+              <a href="./hello-parallax.html" class="button is-link">Pergi ke Halaman Lain</a>
 
               <!-- ... (content section) ... -->
             </div>
