--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </div>
             <div data-aos="fade-down" class="column is-10-mobile is-offset-1-mobile is-10-tablet is-offset-1-tablet is-4-desktop is-offset-1-desktop is-4-widescreen is-offset-1-widescreen is-4-fullhd is-offset-1-fullhd" data-aos="fade-up">
               <figure class="image is-square">
-                <img src="../images/yos.svg" alt="Placeholder Image" />
+                <img src="./yos.svg" alt="Placeholder Image" />
               </figure>
             </div>
           </div>
